--- a/src/ontology/parco-ca-odk.yaml
+++ b/src/ontology/parco-ca-odk.yaml
@@ -30,8 +30,12 @@ github_org: eu-parc
 gzip_main: false
 id: parco-ca
 import_component_format: ofn
-import_group: null
-import_pattern_ontology: false
+import_group:
+    products:
+    - id: pato 
+      module_type: slme
+      module_type_slme: STAR
+    - id: uo
 license: https://creativecommons.org/licenses/unspecified
 namespaces: null
 obo_format_options: ''
@@ -47,7 +51,7 @@ release_artefacts:
 release_date: false
 release_diff: false
 release_use_reasoner: true
-remove_owl_nothing: false
+remove_owl_nothing: true
 repo: parco-ca
 robot_java_args: ''
 robot_report:
@@ -79,8 +83,7 @@ sssom_mappingset_group: null
 subset_group: null
 title: parco-ca
 travis_emails: null
-uribase: http://purl.obolibrary.org/obo
-uribase_suffix: null
+uribase: http://si.eu-parc.eu
 use_context: false
 use_custom_import_module: false
 use_dosdps: false
@@ -88,6 +91,6 @@ use_edit_file_imports: true
 use_env_file_docker: false
 use_external_date: false
 use_mappings: false
-use_templates: false
+use_templates: true
 workflows:
 - docs
